--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,13 +19,39 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    env:
+      LOGIN: ${{secrets.QASE_USER}}
+      PASSWORD: ${{secrets.QASE_PASSWORD}}
+      TOKEN: ${{secrets.QASE_TOKEN}}
+
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: maven
-    - name: Running tests
-      run: mvn clean test
+      - uses: actions/checkout@v4
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
+      - name: Running tests
+        run: mvn clean test -Duser=$LOGIN -Dpassword=$PASSWORD -Dtoken=$TOKEN
+
+      - name: Get Allure history
+        uses: actions/checkout@v2
+        if: always()
+        continue-on-error: true
+        with:
+          ref: gh-pages
+          path: gh-pages
+      - name: Allure Report action from marketplace
+        uses: simple-elf/allure-report-action@master
+        if: always()
+        with:
+          allure_results: target/allure-results
+          allure_history: allure-history
+      - name: Deploy report to Github Pages
+        if: always()
+        uses: peaceiris/actions-gh-pages@v2
+        env:
+          PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PUBLISH_BRANCH: gh-pages
+          PUBLISH_DIR: allure-history
